# LiOAvIZ-Lab4

./: CMakeLists.txt  README.md  Report_4.docx
lib/: CMakeLists.txt  binary_tree.h
lib/binarytree/: CMakeLists.txt  binary_tree.h
lib/tui/: CMakeLists.txt  binary_tree_tui.h
src/: binary_tree.h  main.cpp
